added bert to frontend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="./assets/app.pcss" />
   </head>
   <body>
-    <h1 class="text-6xl mb-12">Welcome to write with German GPT2</h1>
-
-    <x-input></x-input>
-
-    <script src="./components/InputField/InputField.tsx"></script>
+    <h1 class="text-xl mb-12">Welcome to write with German GPT2</h1>
+    <x-gpt></x-gpt>
+    <h1 class="text-xl mb-12">Welcome to write with German BERT</h1>
+    <x-bert></x-bert>
+    <script src="./components/gpt/InputField.tsx"></script>
+    <script src="./components/bert/InputField.tsx"></script>
   </body>
 </html>
